--- a/src/views/particle/examples/webgl/geologicBodyExplode.html
+++ b/src/views/particle/examples/webgl/geologicBodyExplode.html
@@ -42,7 +42,7 @@
     </div>
     <div id="toolbar" class="param-container tool-bar">
         <div class="dzt-operate">
-            <button id="explode" class="button black" type="button">爆炸</button>
+            <button id="explode" class="button black" type="button">展开</button>
             <button id="reset" class="button black" type="button">还原</button>
         </div>
     </div>
