--- a/src/views/particle/geologicBodyExplode.html
+++ b/src/views/particle/geologicBodyExplode.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-  <title>地质体爆炸</title>
+  <title>地质体展开</title>
   <link href="../../Build/SuperMap3D/Widgets/widgets.css" rel="stylesheet">
   <link href="./css/pretty.css" rel="stylesheet">
   <link href="./style/geologicBodyExplode.css" rel="stylesheet">
@@ -42,7 +42,7 @@
 </div>
 <div id="toolbar" class="param-container tool-bar">
   <div class="dzt-operate">
-    <button id="explode" class="button black" type="button">爆炸</button>
+    <button id="explode" class="button black" type="button">展开</button>
     <button id="reset" class="button black" type="button">还原</button>
   </div>
 </div>
